--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
-        android:layout_height="400sp"
+        android:layout_height="370dp"
         android:layout_marginBottom="4dp"
         android:layout_marginEnd="4dp"
         android:layout_marginTop="4dp"
@@ -20,18 +20,55 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.339"
+        app:layout_constraintVertical_bias="0.0"
         app:layout_constraintVertical_weight="7">
+
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="Subtitle"/>
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_media_startup_image"/>
 
     </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+
+        <SeekBar
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintVertical_weight="2" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/starting_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1.11"/>
+
+            <TextView
+                android:id="@+id/remain_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="1.11"
+                android:gravity="right"/>
+        </LinearLayout>
+
+
+    </LinearLayout>
+
 
     <LinearLayout
         android:id="@+id/linearLayout3"
@@ -54,17 +91,20 @@
         <ImageButton
             style="@style/PlayButtonStyle"
             android:id="@+id/check_list_button"
-            android:src="@drawable/ic_play_check_list_image" />
+            android:src="@drawable/ic_play_check_list_image"
+            android:contentDescription="TODO" />
 
         <ImageButton
             style="@style/PlayButtonStyle"
             android:id="@+id/previous_button"
-            android:src="@drawable/ic_play_previous_image"/>
+            android:src="@drawable/ic_play_previous_image"
+            android:contentDescription="TODO" />
 
         <ImageButton
             style="@style/PlayButtonStyle"
             android:id="@+id/play_or_pause_button"
-            android:src="@drawable/ic_play_button_image"/>
+            android:src="@drawable/ic_play_button_image"
+            android:contentDescription="TODO" />
 
         <ImageButton
             style="@style/PlayButtonStyle"
@@ -73,9 +113,9 @@
         <ImageButton
             style="@style/PlayButtonStyle"
             android:id="@+id/add_list_button"
-            android:src="@drawable/play_add_list_image"/>
+            android:src="@drawable/play_add_list_image"
+            android:contentDescription="TODO" />
 
 
     </LinearLayout>
-
 </android.support.constraint.ConstraintLayout>
