--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
         <SeekBar
+            android:id="@+id/position_seek_bar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintVertical_weight="2" />
@@ -53,7 +54,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
-                android:id="@+id/starting_time"
+                android:id="@+id/elapse_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="1.11"/>
@@ -88,32 +89,32 @@
         app:layout_constraintVertical_bias="0.965"
         app:layout_constraintVertical_weight="3">
 
-        <ImageButton
+        <Button
             style="@style/PlayButtonStyle"
             android:id="@+id/check_list_button"
-            android:src="@drawable/ic_play_check_list_image"
+            android:background="@drawable/ic_play_check_list_image"
             android:contentDescription="TODO" />
 
-        <ImageButton
+        <Button
             style="@style/PlayButtonStyle"
             android:id="@+id/previous_button"
-            android:src="@drawable/ic_play_previous_image"
+            android:background="@drawable/ic_play_previous_image"
             android:contentDescription="TODO" />
 
-        <ImageButton
+        <Button
             style="@style/PlayButtonStyle"
             android:id="@+id/play_or_pause_button"
-            android:src="@drawable/ic_play_button_image"
+            android:background="@drawable/ic_play_button_image"
             android:contentDescription="TODO" />
 
-        <ImageButton
+        <Button
             style="@style/PlayButtonStyle"
             android:id="@+id/next_button"
-            android:src="@drawable/ic_play_next_image"/>
-        <ImageButton
+            android:background="@drawable/ic_play_next_image"/>
+        <Button
             style="@style/PlayButtonStyle"
             android:id="@+id/add_list_button"
-            android:src="@drawable/play_add_list_image"
+            android:background="@drawable/play_add_list_image"
             android:contentDescription="TODO" />
 
 
