--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
-                android:id="@+id/elapse_time"
+                android:id="@+id/current_position"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="1.11"/>
