--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,26 +10,26 @@
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="370dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
         android:layout_marginBottom="4dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginTop="4dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:layout_constraintVertical_weight="7">
 
-        <ImageView
+        <VideoView
+            android:id="@+id/videoScreen"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_media_startup_image"/>
+            android:src="@drawable/ic_media_startup_image" />
 
     </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,7 +43,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
-
         <SeekBar
             android:id="@+id/position_seek_bar"
             android:layout_width="match_parent"
@@ -54,7 +53,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
-                android:id="@+id/elapse_time"
+                android:id="@+id/current_position"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0:00"/>
@@ -66,8 +65,6 @@
                 android:text="0:00"
                 android:gravity="right"/>
         </LinearLayout>
-
-
     </LinearLayout>
 
 
@@ -89,34 +86,32 @@
         app:layout_constraintVertical_bias="0.965"
         app:layout_constraintVertical_weight="3">
 
-        <Button
+        <ImageButton
             style="@style/PlayButtonStyle"
             android:id="@+id/check_list_button"
             android:background="@drawable/ic_play_check_list_image"
             android:contentDescription="TODO" />
 
-        <Button
+        <ImageButton
             style="@style/PlayButtonStyle"
             android:id="@+id/previous_button"
             android:background="@drawable/ic_play_previous_image"
             android:contentDescription="TODO" />
 
-        <Button
+        <ImageButton
             style="@style/PlayButtonStyle"
             android:id="@+id/play_or_pause_button"
             android:background="@drawable/ic_play_button_image"
             android:contentDescription="TODO" />
 
-        <Button
+        <ImageButton
             style="@style/PlayButtonStyle"
             android:id="@+id/next_button"
             android:background="@drawable/ic_play_next_image"/>
-        <Button
+        <ImageButton
             style="@style/PlayButtonStyle"
             android:id="@+id/add_list_button"
             android:background="@drawable/play_add_list_image"
             android:contentDescription="TODO" />
-
-
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
