To Do: 1. Add subtitle -Trying to add through separate MediaPlayer/TextView (Tried adding through VideoView but was not successful) Completed: 1. Make controller to transparent and make it visible when pressed video view.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -125,8 +125,8 @@
 
         <ImageButton
             style="@style/PlayButtonStyle"
-            android:id="@+id/previous_button"
-            android:background="@drawable/ic_play_previous_image"
+            android:id="@+id/ic_subtitle_image"
+            android:background="@drawable/ic_subtitle_image"
             android:contentDescription="TODO" />
 
         <ImageButton
