--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,17 +55,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                 app:layout_constraintVertical_bias="0.0" />
 
-            <TextView
-                android:id="@+id/txtDisplay"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/videoView"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="@+id/videoView"
-                app:layout_constraintTop_toTopOf="@+id/videoView"
-                app:layout_constraintVertical_bias="0.629" />
-
         </android.support.constraint.ConstraintLayout>
 
     </LinearLayout>
@@ -172,7 +161,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:visibility="invisible"
-        android:textSize="10dp"
+        android:textAlignment="center"
+        android:textSize="15dp"
         android:textColor="@color/babyBlue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
