--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,7 +96,7 @@
                 android:textColor ="@color/babyBlue"/>
 
             <TextView
-                android:id="@+id/remain_time"
+                android:id="@+id/total_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
